resolve IDE-5063
resolved the problem that Portal JBoss eap 7.4 can not start up in IDE