@@ -16,9 +16,11 @@ package com.liferay.ide.server.core.portal;
 
 import com.liferay.ide.server.util.JavaUtil;
 
+import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.jdt.launching.IVMInstall;
@@ -74,6 +76,18 @@ public class PortalJBossEapBundle extends PortalJBossBundle {
 				"-Xbootclasspath/p:\"" + bundlePath +
 					"/modules/system/layers/base/org/jboss/log4j/logmanager/main/log4j-jboss-logmanager-1.1.1.Final-" +
 						"redhat-1.jar\"");
+			
+			File wildflyCommonLib = getJbossLib(bundlePath, "/modules/system/layers/base/org/wildfly/common/main/");
+			if (Objects.nonNull(wildflyCommonLib)) {
+				args.add("-Xbootclasspath/p:\"" + wildflyCommonLib.getAbsolutePath() + "\"");
+			}
+			
+			File jbossLogManagerLib = getJbossLib(bundlePath, "/modules/system/layers/base/org/jboss/logmanager/main/");
+			if (Objects.nonNull(jbossLogManagerLib)) {
+				args.add("-Xbootclasspath/p:\"" + jbossLogManagerLib.getAbsolutePath() + "\"");
+			}
+		}else {
+			args.add("--add-modules java.se");
 		}
 
 		args.add("-Djboss.modules.system.pkgs=org.jboss.logmanager");
@@ -84,7 +98,7 @@ public class PortalJBossEapBundle extends PortalJBossBundle {
 		args.add("-Djboss.bind.address.management=localhost");
 		args.add("-Duser.timezone=GMT");
 		args.add("-Dorg.jboss.logmanager.nocolor=true");
-
+		
 		return args.toArray(new String[0]);
 	}
 
